RESOLVED FIXED254951
iOS 16.4 and macOS Ventura 13.3 build fix for third-party
https://bugs.webkit.org/show_bug.cgi?id=254951
Summary iOS 16.4 and macOS Ventura 13.3 build fix for third-party
Robert Jenner
Reported 2023-04-03 16:13:18 PDT
There are multiple "variable set but not used" in boringssl, libwebvpx, and libwebrtc when building WebKit for iOS 16.4 and macOS Ventura 13.3
Attachments
Radar WebKit Bug Importer
Comment 1 2023-04-03 16:13:35 PDT
Robert Jenner
Comment 2 2023-04-03 16:28:13 PDT
Robert Jenner
Comment 3 2023-04-03 17:01:54 PDT
ChangSeok Oh
Comment 4 2023-04-03 17:02:05 PDT
*** Bug 254953 has been marked as a duplicate of this bug. ***
EWS
Comment 5 2023-04-03 18:04:32 PDT
Committed 262552@main (951180b3bdc6): <https://commits.webkit.org/262552@main> Reviewed commits have been landed. Closing PR #12344 and removing active labels.
EWS
Comment 6 2023-04-03 19:02:41 PDT
Committed 262555@main (6d90410e92df): <https://commits.webkit.org/262555@main> Reviewed commits have been landed. Closing PR #12348 and removing active labels.
EWS
Comment 7 2023-04-04 11:24:17 PDT
Committed 259548.559@safari-7615-branch (2faf9603a854): <https://commits.webkit.org/259548.559@safari-7615-branch> Reviewed commits have been landed. Closing PR #527 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.