Cherry-pick 262555@main (6d90410e92df). rdar://107582190

Fix JSC and WebCore build failures for iOS16.4 and macOS Ventura 13.3
    https://bugs.webkit.org/show_bug.cgi?id=254951
    rdar://107582190

    Reviewed by David Kilzer.

    Build fix to remove set, but unused variables in JSC and WebCore.

    * Source/JavaScriptCore/API/ObjCCallbackFunction.mm:
    (objCCallbackFunctionForInvocation):
    * Source/WebCore/editing/cocoa/DataDetection.mm:
    (WebCore::buildQuery):

    Canonical link: https://commits.webkit.org/262555@main

Canonical link: https://commits.webkit.org/259548.559@safari-7615-branch