Source/WebCore/editing/cocoa/DataDetection.mm
@@ -361,7 +361,6 @@ static void buildQuery(DDScanQueryRef scanQuery, const SimpleRange& contextRange
     CFCharacterSetRef newLinesSet = CFCharacterSetGetPredefined(kCFCharacterSetNewline);
     
     CFIndex iteratorCount = 0;
-    CFIndex fragmentCount = 0;
     
     // Build the scan query adding separators.
     // For each fragment the iterator increment is stored as metadata.
@@ -417,7 +416,6 @@ static void buildQuery(DDScanQueryRef scanQuery, const SimpleRange& contextRange
         
         auto currentTextCFString = adoptCF(CFStringCreateWithCharacters(kCFAllocatorDefault, reinterpret_cast<const UniChar*>(currentTextUpconvertedCharacters.get()), currentTextLength));
         PAL::softLink_DataDetectorsCore_DDScanQueryAddTextFragment(scanQuery, currentTextCFString.get(), CFRangeMake(0, currentTextLength), (void *)iteratorCount, (DDTextFragmentMode)0, DDTextCoalescingTypeNone);
-        fragmentCount++;
     }
 }
 
